# price-intelligence-system

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  hello.py  pyproject.toml
core/: constants.py
core/google/: get_bot_credentials.py  get_credentials.py
core/google/folder/: list.py
core/google/sheet/: add.py  create.py  open.py
etls/promohub/: job.py
learnning/: 01-create-project-gcp.md
megazord/: .gitignore  .pylintrc  pyproject.toml
megazord/app/: __main__.py
megazord/app/google/: get_bot_credentials.py  get_credentials.py
megazord/app/google/sheet/: add.py
megazord/source/: __main__.py
megazord/source/google/sheet/: add.py
