[project]
name = "price-intelligence-system"
version = "0.1.0"
description = "This a system to collect prices and promotions from different websites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "playwright>=1.48.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
