[tool.poetry]
name = "price-intelligence-system"
version = "0.1.0"
description = ""
authors = ["Raphael Silva do Nascimento"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
