[tool.poetry]
package-mode = false
name = "megazord"
version = "0.1.0"
description = "Price and Promo colecting"
authors = ["Raphael Silva Do Nascimento <raphael.nascimento@grupoboticario.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
playwright = "^1.47.0"
beautifulsoup4 = "^4.12.3"
gspread = "^6.1.3"
oauth2client = "^4.1.3"
google-api-python-client = "^2.149.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
